started analysis of Lead Source variable

--- a/lead_scoring.ipynb
+++ b/lead_scoring.ipynb
@@ -1245,7 +1245,7 @@
     }
    ],
    "source": [
-    "# Check the value caount of the variable\n",
+    "# Check the value count of the variable\n",
     "lead_data['Lead Origin'].value_counts(dropna=False)"
    ]
   },
@@ -1275,9 +1275,105 @@
    "source": [
     "**Conclusion:**\n",
     "1.    \"Landing page submissions\" and \"API\" have identified the most leads, and the majority of the leads converted from these sources.\n",
-    "2.    \"Lead Add Form\" has a high lead conversion rate but the total identifies leads is less compared to \"Landing page submissions\" and \"API\"\n",
+    "2.    \"Lead Add Form\" has a high lead conversion rate but the total identifies leads is less compared to \"Landing page submissions\" and \"API\".\n",
     "3.    \"Lead Import\" and \"Quick Add Form\" have gathered the least leads and have very low conversion rates.\n",
     "4.    We can focus on improving the conversion rate of \"API\" and \"Landing page submissions\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2. Lead Source**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Olark Chat', 'Organic Search', 'Direct Traffic', 'Google',\n",
+       "       'Referral Sites', 'Welingak Website', 'Reference', 'google',\n",
+       "       'Facebook', nan, 'blog', 'Pay per Click Ads', 'bing',\n",
+       "       'Social Media', 'WeLearn', 'Click2call', 'Live Chat',\n",
+       "       'welearnblog_Home', 'youtubechannel', 'testone', 'Press_Release',\n",
+       "       'NC_EDM'], dtype=object)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check the unique values of the variable\n",
+    "lead_data['Lead Source'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Google               2868\n",
+       "Direct Traffic       2543\n",
+       "Olark Chat           1755\n",
+       "Organic Search       1154\n",
+       "Reference             534\n",
+       "Welingak Website      142\n",
+       "Referral Sites        125\n",
+       "Facebook               55\n",
+       "NaN                    36\n",
+       "bing                    6\n",
+       "google                  5\n",
+       "Click2call              4\n",
+       "Press_Release           2\n",
+       "Social Media            2\n",
+       "Live Chat               2\n",
+       "youtubechannel          1\n",
+       "testone                 1\n",
+       "Pay per Click Ads       1\n",
+       "welearnblog_Home        1\n",
+       "WeLearn                 1\n",
+       "blog                    1\n",
+       "NC_EDM                  1\n",
+       "Name: Lead Source, dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check the value count of the variable\n",
+    "lead_data['Lead Source'].value_counts(dropna=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- As we can see, there are many lead sources, some of which have collected very few leads.\n",
+    "- Therefore, we will keep the top 5 lead sources in their original form and replace the values of the others with \"Others\".\n",
+    "- We will also replace the null values with \"Others\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lead_data['Lead Source'] = lead_data['Lead Source'].replace(['Welingak Website', 'Referral Sites', 'Facebook', 'bing', 'google', 'Click2call', \n",
+    "                                                             'Press_Release', 'Social Media', 'Live Chat', 'youtubechannel', 'testone', \n",
+    "                                                             'Pay per Click Ads', 'welearnblog_Home', 'WeLearn', 'blog', 'NC_EDM'], 'Others')\n"
    ]
   },
   {
@@ -1286,6 +1382,34 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Google            2868\n",
+       "Direct Traffic    2543\n",
+       "Olark Chat        1755\n",
+       "Organic Search    1154\n",
+       "Reference          534\n",
+       "Others             350\n",
+       "NaN                 36\n",
+       "Name: Lead Source, dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check the value count of the variable\n",
+    "lead_data['Lead Source'].value_counts(dropna=False)"
+   ]
   },
   {
    "cell_type": "code",
