added proper annotations

--- a/lead_scoring.ipynb
+++ b/lead_scoring.ipynb
@@ -48,14 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. EDA"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1.1 - Understand the Dataset"
+    "# 1. Reading and understand the Dataset"
    ]
   },
   {
@@ -577,6 +570,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 2. EDA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- The majority of the columns have an object data type, which we will convert accordingly."
    ]
   },
@@ -760,7 +760,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 - Handle Missing Values"
+    "### 2.1. - Handle Missing Values"
    ]
   },
   {
@@ -1035,7 +1035,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3 - Categorical columns analysis"
+    "### 2.2. - Categorical columns analysis"
    ]
   },
   {
@@ -3298,7 +3298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.4 - Numerical columns analysis"
+    "### 2.3. - Numerical columns analysis"
    ]
   },
   {
@@ -3897,14 +3897,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Preparing data for modeling"
+    "# 3. Preparing data for modeling"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.1. Create dummy variables"
+    "#### 3.1. Create dummy variables"
    ]
   },
   {
@@ -4887,7 +4887,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.2. Split data into train and test datasets"
+    "#### 3.2. Split data into train and test datasets"
    ]
   },
   {
@@ -5627,7 +5627,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Train the model\n"
+    "# 4. Train the model\n"
    ]
   },
   {
@@ -7393,14 +7393,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. Prediction and evaluation on the test data"
+    "# 5. Prediction and evaluation on the test data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4.1. Scalling the test data set"
+    "#### 5.1. Scalling the test data set"
    ]
   },
   {
@@ -7412,6 +7412,13 @@
     "# Transform on data\n",
     "X_test[['TotalVisits', 'Total_Time_Spent_on_Website', 'Page_Views_Per_Visit']] = scaler.transform(X_test[['TotalVisits', 'Total_Time_Spent_on_Website', \n",
     "                                                                                                                'Page_Views_Per_Visit']])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.2. Testing the model on test data set"
    ]
   },
   {
